Created basic post request

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>Its Working!</h1>
 
-<form action="" method="POST" role="form">
+<form action="" method="POST" role="form" id="handleForm">
     <legend>Create A Burger</legend>
 
     <div class="form-group">
@@ -14,3 +14,4 @@
 
     <button type="submit" id="sButton" class="btn btn-primary">Submit</button>
 </form>
+<script src="../handleForm.js" type="text/javascript"></script>
